--- a/settings.json
+++ b/settings.json
@@ -7,7 +7,9 @@
         "fade_duration": 0.4,
         "antialias_layers": 6,
         "min_distance": 20,
-        "line_color": "#00BFFF"
+        "line_color": "#00BFFF",
+        "max_stroke_points": 200,
+        "max_stroke_duration": 15
     },
     "gestures": {
         "打开开始菜单": {
