--- a/settings.json
+++ b/settings.json
@@ -9,7 +9,10 @@
         "min_distance": 20,
         "line_color": "#00BFFF",
         "max_stroke_points": 200,
-        "max_stroke_duration": 5
+        "max_stroke_duration": 5,
+        "enable_advanced_brush": true,
+        "fade_color": "#0000FF",
+        "force_topmost": true
     },
     "gestures": {
         "打开开始菜单": {
