--- a/settings.json
+++ b/settings.json
@@ -10,8 +10,11 @@
         "line_color": "#00BFFF",
         "max_stroke_points": 200,
         "max_stroke_duration": 5,
-        "enable_advanced_brush": false,
-        "force_topmost": true
+        "enable_advanced_brush": true,
+        "force_topmost": true,
+        "enable_auto_smoothing": true,
+        "smoothing_factor": 0.3,
+        "enable_hardware_acceleration": true
     },
     "gestures": {
         "打开开始菜单": {
