--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 PyQt5==5.15.9
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.12.2
+PyQtWebEngine==5.15.6
+PyQtWebEngine-Qt5==5.15.2
 pyautogui==0.9.54
 pywin32==306
 numpy==1.24.3
 pillow==10.0.0
 pyperclip==1.8.2
+flask==2.3.3
+psutil==5.9.5
