--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ PyQt5-sip==12.12.2
 PyQtWebEngine==5.15.6
 PyQtWebEngine-Qt5==5.15.2
 pyautogui==0.9.54
-pywin32==306
+pywin32>=300
 numpy==1.24.3
 pillow==10.0.0
 pyperclip==1.8.2
 flask==2.3.3
 psutil==5.9.5
+PyOpenGL==3.1.9
