线条颜色设置修复

--- a/src/settings.json
+++ b/src/settings.json
@@ -4,8 +4,8 @@
     "base_width": 9.0,
     "min_width": 3.0,
     "max_width": 15.0,
-    "smoothing": 0.7,
-    "color": "#4299E1",
+    "smoothing": 0.65,
+    "color": "#00ff55",
     "fade_time": 0.5,
     "advanced_brush": true,
     "auto_smoothing": true,
@@ -13,10 +13,10 @@
     "max_stroke_points": 200,
     "max_stroke_duration": 5,
     "hardware_acceleration": true,
-    "canvas_border": 1,
+    "canvas_border": 4.0,
     "min_points": 10,
-    "max_pause_ms": 300.0,
-    "min_length": 50,
+    "max_pause_ms": 550.0,
+    "min_length": 10.0,
     "sensitivity": 0.8
   },
   "app": {
