--- a/src/settings.json
+++ b/src/settings.json
@@ -1,4 +1,17 @@
 {
+  "app": {
+    "start_minimized": false,
+    "auto_start_recognition": false,
+    "show_tray_notifications": true,
+    "stay_on_top": false,
+    "language": "zh_CN",
+    "theme": "light",
+    "version": "1.0.0",
+    "start_with_windows": false,
+    "minimize_to_tray": true,
+    "show_notifications": true,
+    "log_level": "info"
+  },
   "drawing": {
     "speed_factor": 1.2,
     "base_width": 6.0,
@@ -11,20 +24,12 @@
     "auto_smoothing": true,
     "min_distance": 20,
     "max_stroke_points": 200,
-    "max_stroke_duration": 5,
+    "max_stroke_duration": 1.0,
     "hardware_acceleration": true,
-    "canvas_border": 1,
-    "min_points": 10,
+    "canvas_border": 0.0,
+    "min_points": 17.0,
     "max_pause_ms": 300,
     "min_length": 50,
-    "sensitivity": 0.8
-  },
-  "app": {
-    "start_with_windows": false,
-    "start_minimized": false,
-    "minimize_to_tray": true,
-    "auto_start_recognition": false,
-    "show_notifications": true,
-    "log_level": "info"
+    "sensitivity": 0.1
   }
 }
