--- a/src/settings.json
+++ b/src/settings.json
@@ -6,11 +6,7 @@
     "stay_on_top": false,
     "language": "zh_CN",
     "theme": "light",
-    "version": "1.0.0",
-    "start_with_windows": false,
-    "minimize_to_tray": true,
-    "show_notifications": true,
-    "log_level": "info"
+    "version": "1.0.0"
   },
   "drawing": {
     "speed_factor": 1.2,
@@ -24,12 +20,12 @@
     "auto_smoothing": true,
     "min_distance": 20,
     "max_stroke_points": 200,
-    "max_stroke_duration": 1.0,
+    "max_stroke_duration": 5,
     "hardware_acceleration": true,
-    "canvas_border": 0.0,
-    "min_points": 17.0,
+    "canvas_border": 1,
+    "min_points": 10,
     "max_pause_ms": 300,
     "min_length": 50,
-    "sensitivity": 0.1
+    "sensitivity": 0.8
   }
 }
