--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ PyQt5-Qt5==5.15.2
 PyQt5-sip==12.12.2
 PyQtWebEngine==5.15.6
 PyQtWebEngine-Qt5==5.15.2
-pyautogui==0.9.54
+pyautogui>=0.9.53
 pywin32>=300 ; platform_system == "Windows"
-numpy==1.24.3
-pillow==10.0.0
+numpy>=1.19.0
+Pillow>=9.0.0
 pyperclip==1.8.2
 flask==2.3.3
 psutil>=5.9.0
