更加灵动的控件

--- a/src/settings.json
+++ b/src/settings.json
@@ -14,11 +14,11 @@
     "min_width": 3.0,
     "max_width": 15.0,
     "smoothing": 0.7,
-    "color": "#87e1b9",
-    "fade_time": 0.1,
+    "color": "#4299E1",
+    "fade_time": 0.5,
     "advanced_brush": true,
     "auto_smoothing": true,
-    "min_distance": 14.0,
+    "min_distance": 20,
     "max_stroke_points": 200,
     "max_stroke_duration": 5,
     "hardware_acceleration": true,
