--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,23 +13,6 @@ on:
         default: '手动触发构建'
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Run tests
-      run: |
-        # 如果有测试脚本，可以在这里运行
-        echo "运行测试..."
-
   # 手动触发的Nuitka编译工作流
   nuitka-build:
     name: Nuitka编译
@@ -38,10 +21,10 @@ jobs:
     if: github.event_name == 'workflow_dispatch'
     steps:
       - name: 检出代码
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: 设置Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
           cache: 'pip'
@@ -51,6 +34,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install nuitka
           pip install -r requirements.txt
+
+      - name: 安装ImageMagick
+        run: choco install imagemagick -y
+
+      - name: 转换SVG到ICO
+        run: |
+          mkdir -p src/assets/images
+          magick convert src/assets/images/icon.svg -define icon:auto-resize=256,128,64,48,32,16 src/assets/images/icon.ico
 
       - name: 使用Nuitka编译
         run: |
