--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,8 +40,11 @@ jobs:
 
       - name: 转换SVG到ICO
         run: |
-          mkdir -p src/assets/images
-          magick convert src/assets/images/icon.svg -define icon:auto-resize=256,128,64,48,32,16 src/assets/images/icon.ico
+          if (-not (Test-Path -Path src/assets/images/icon.svg)) {
+              Write-Error "缺少SVG图标文件: src/assets/images/icon.svg"
+              exit 1
+          }
+          magick convert src/assets/images/icon.svg -define icon:auto-resize=256,128,64,48,32,16 -background none src/assets/images/icon.ico -verbose
 
       - name: 使用Nuitka编译
         run: |
