--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,7 +157,9 @@ jobs:
       - name: Windows - 处理图标
         if: matrix.os == 'windows-latest'
         run: |
-          mkdir -p src/assets/images
+          if (-Not (Test-Path -Path "src/assets/images")) {
+            mkdir -p src/assets/images
+          }
           if (Test-Path -Path src/assets/images/icon.svg) {
             magick src/assets/images/icon.svg -background none -resize 256x256 icon-256.png
             magick src/assets/images/icon.svg -background none -resize 128x128 icon-128.png
@@ -176,7 +178,9 @@ jobs:
       - name: macOS - 处理图标
         if: matrix.os == 'macos-latest'
         run: |
-          mkdir -p src/assets/images
+          if [ ! -d "src/assets/images" ]; then
+            mkdir -p src/assets/images
+          fi
           if [ -f src/assets/images/icon.svg ]; then
             mkdir -p iconset
             for size in 16 32 64 128 256 512 1024; do
@@ -193,7 +197,9 @@ jobs:
       - name: Linux - 处理图标
         if: matrix.os == 'ubuntu-latest'
         run: |
-          mkdir -p src/assets/images
+          if [ ! -d "src/assets/images" ]; then
+            mkdir -p src/assets/images
+          fi
           if [ -f src/assets/images/icon.svg ]; then
             convert -background none src/assets/images/icon.svg -resize 256x256 src/assets/images/icon.png
           else
@@ -254,23 +260,23 @@ jobs:
             python -m nuitka --standalone --enable-plugin=pyqt6 --include-data-dir=src/assets=assets --windows-icon-from-ico=src/assets/images/icon.ico --output-dir=dist --assume-yes-for-downloads src/main.py
             
             # 创建Inno Setup脚本
-            cat > installer.iss << EOF
-            [Setup]
-            AppName=GestroKey
-            AppVersion=${{ needs.get-version.outputs.version }}
-            DefaultDirName={pf}\GestroKey
-            DefaultGroupName=GestroKey
-            UninstallDisplayIcon={app}\main.exe
-            OutputDir=dist
-            OutputBaseFilename=GestroKey-${{ needs.get-version.outputs.version }}-Windows-Setup
-            
-            [Files]
-            Source: "dist\main.dist\*"; DestDir: "{app}"; Flags: recursesubdirs
-            
-            [Icons]
-            Name: "{group}\GestroKey"; Filename: "{app}\main.exe"
-            Name: "{commondesktop}\GestroKey"; Filename: "{app}\main.exe"
-            EOF
+            cat > installer.iss << 'EOF'
+[Setup]
+AppName=GestroKey
+AppVersion=${{ needs.get-version.outputs.version }}
+DefaultDirName={pf}\GestroKey
+DefaultGroupName=GestroKey
+UninstallDisplayIcon={app}\main.exe
+OutputDir=dist
+OutputBaseFilename=GestroKey-${{ needs.get-version.outputs.version }}-Windows-Setup
+
+[Files]
+Source: "dist\main.dist\*"; DestDir: "{app}"; Flags: recursesubdirs
+
+[Icons]
+Name: "{group}\GestroKey"; Filename: "{app}\main.exe"
+Name: "{commondesktop}\GestroKey"; Filename: "{app}\main.exe"
+EOF
             
             # 编译安装包
             "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" installer.iss
@@ -289,28 +295,28 @@ jobs:
             cp -r dist/main.dist/* dist/deb-package/usr/local/bin/gestrokey/
             cp src/assets/images/icon.png dist/deb-package/usr/share/icons/hicolor/256x256/apps/gestrokey.png
             
-            # 创建启动器
-            cat > dist/deb-package/usr/share/applications/gestrokey.desktop << EOF
-            [Desktop Entry]
-            Type=Application
-            Name=GestroKey
-            Comment=鼠标手势控制工具
-            Exec=/usr/local/bin/gestrokey/main
-            Icon=gestrokey
-            Categories=Utility;
-            EOF
+            # 创建启动器 - 修复heredoc
+            cat > dist/deb-package/usr/share/applications/gestrokey.desktop << 'EOF'
+[Desktop Entry]
+Type=Application
+Name=GestroKey
+Comment=鼠标手势控制工具
+Exec=/usr/local/bin/gestrokey/main
+Icon=gestrokey
+Categories=Utility;
+EOF
             
-            # 创建控制文件
-            cat > dist/deb-package/DEBIAN/control << EOF
-            Package: gestrokey
-            Version: ${{ needs.get-version.outputs.version }}
-            Section: utils
-            Priority: optional
-            Architecture: amd64
-            Maintainer: GestroKey Team
-            Description: 鼠标手势控制工具
-             GestroKey允许用户通过鼠标绘制来执行各种操作
-            EOF
+            # 创建控制文件 - 修复heredoc
+            cat > dist/deb-package/DEBIAN/control << 'EOF'
+Package: gestrokey
+Version: ${{ needs.get-version.outputs.version }}
+Section: utils
+Priority: optional
+Architecture: amd64
+Maintainer: GestroKey Team
+Description: 鼠标手势控制工具
+ GestroKey允许用户通过鼠标绘制来执行各种操作
+EOF
             
             # 构建DEB包
             fakeroot dpkg-deb --build dist/deb-package "dist/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Setup.deb"
@@ -322,7 +328,7 @@ jobs:
             # 重命名应用
             mv dist/main.app "dist/GestroKey.app"
             
-            # 创建DMG
+            # 创建DMG - 修复命令格式
             create-dmg \
               --volname "GestroKey" \
               --volicon "src/assets/images/icon.icns" \
@@ -372,27 +378,27 @@ jobs:
         id: generate_table
         run: |
           # 生成包含下载链接的表格
-          cat << EOF > release_table.md
-          # GestroKey ${{ needs.get-version.outputs.version }} ${{ needs.get-version.outputs.version_type }}
-          
-          ## 下载链接
-          
-          | 操作系统 | 安装包 | 单文件版 | 便携版 |
-          |---------|--------|---------|-------|
-          | Windows | [安装程序]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Setup.exe) | [独立可执行文件]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Standalone.exe) | [ZIP压缩包]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Portable.zip) |
-          | macOS   | [DMG安装镜像]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Setup.dmg) | [独立可执行文件]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Standalone) | [ZIP压缩包]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Portable.zip) |
-          | Linux   | [DEB安装包]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Setup.deb) | [独立可执行文件]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Standalone) | [TAR.GZ压缩包]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Portable.tar.gz) |
-          
-          ## 系统要求
-          
-          - **Windows**: Windows 10/11 64位
-          - **macOS**: macOS 11.0+ (Big Sur及更高版本)
-          - **Linux**: 主流桌面发行版 (Ubuntu 20.04+, Fedora 36+, Debian 11+)
-          
-          ## 更新说明
-          
-          此版本由GitHub Actions自动构建于 ${{ github.event.repository.updated_at }}
-          EOF
+          cat << 'EOF' > release_table.md
+# GestroKey ${{ needs.get-version.outputs.version }} ${{ needs.get-version.outputs.version_type }}
+
+## 下载链接
+
+| 操作系统 | 安装包 | 单文件版 | 便携版 |
+|---------|--------|---------|-------|
+| Windows | [安装程序]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Setup.exe) | [独立可执行文件]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Standalone.exe) | [ZIP压缩包]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Windows-Portable.zip) |
+| macOS   | [DMG安装镜像]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Setup.dmg) | [独立可执行文件]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Standalone) | [ZIP压缩包]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-macOS-Portable.zip) |
+| Linux   | [DEB安装包]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Setup.deb) | [独立可执行文件]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Standalone) | [TAR.GZ压缩包]($(echo "${{ needs.get-version.outputs.repo_url }}")/releases/download/${{ needs.get-version.outputs.release_name }}/GestroKey-${{ needs.get-version.outputs.version }}-Linux-Portable.tar.gz) |
+
+## 系统要求
+
+- **Windows**: Windows 10/11 64位
+- **macOS**: macOS 11.0+ (Big Sur及更高版本)
+- **Linux**: 主流桌面发行版 (Ubuntu 20.04+, Fedora 36+, Debian 11+)
+
+## 更新说明
+
+此版本由GitHub Actions自动构建于 ${{ github.event.repository.updated_at }}
+EOF
           
           echo "TABLE_CONTENT<<EOF" >> $GITHUB_OUTPUT
           cat release_table.md >> $GITHUB_OUTPUT
